# export-tkg-rust

./: .gitignore  =  Cargo.toml  Dockerfile  output.xlsx  rust-toolchain.toml  rustfmt.toml  script.txt
csv/06c0ff1e-a435-429c-ae7a-65fdc459d3cc/: 4.csv
csv/52e26393-718b-4f96-b6df-2a8a297b5aba/: 1.csv  2.csv  3.csv  4.csv
csv/52f61fca-c97f-476a-83e1-3e5215ec9b16/: 1.csv  2.csv  3.csv
csv/caf207a6-a439-4a10-80aa-43e4fc981d91/: 1.csv  2.csv  3.csv  4.csv
csv/f6a0eaf4-8200-4467-a82a-198e5022f674/: 1.csv
src/: main.rs  test.http  types.rs
src/core/: database.rs  mod.rs  s3_config.rs
src/email_templates/: download.html  error.html
src/queue/: export_queue.rs  mod.rs
src/router/: export_router.rs  mod.rs
src/utils/: formatted_data.rs  mod.rs
src/worker/: cleaning_file_worker.rs  csv_worker.rs  email_worker.rs  excel_worker.rs  fetch.rs  init_data_worker.rs  mod.rs  upload_worker.rs  worker.rs
