[package]
name = "export_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
csv = "1.4.0"
sqlx = { version = "0.6", features = ["mysql", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
urlencoding = "2.1.3"
anyhow = "1.0.100"
log="0.4"
chrono = { version = "0.4", features = ["serde"]}
serde_json = "1.0"
rust_xlsxwriter = "0.92.2"
dotenv = "0.15.0"
aws-config = "1.8.11"
aws-sdk-s3 = "1.115.0"
#aws-config = "0.61.0"
#aws-sdk-s3 = "0.61.0"


[dependencies.uuid]
version = "1.18.1"
# Lets you generate random UUIDs
features = [
    "v4",
]
